<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?bgPrimary"
    tools:context=".view.MainActivity">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_15sdp"
        android:importantForAccessibility="no"
        android:src="@drawable/app_header_logo"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bg_light_ash"
        style="@style/MediumText"
        android:text="@string/watch_dec"
        android:layout_marginStart="@dimen/_15sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        >
        <ImageView
            android:id="@+id/iv_preferences"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_1sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_play"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?txtSecondary"
            style="@style/SemiBold"
            android:text="@string/only_on_seekho"
            android:layout_marginStart="@dimen/_5sdp"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_anime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            />
        <LinearLayout
            android:id="@+id/llt_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_1sdp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_no_data"
                />

            <TextView
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data_found"
                android:textColor="?txtSecondary"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

    </RelativeLayout>






</LinearLayout>