<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AnimeDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_blur_post_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_default"/>

                <View
                    android:id="@+id/bview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"
                    android:background="@drawable/bg_full_shadow"
                    android:rotation="180" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:background="@drawable/bg_shadow"
                    android:rotation="180"
                    android:layout_alignBottom="@+id/iv_blur_post_image"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_post_image"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/ic_default"
                    android:scaleType="centerCrop"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_25sdp"
                    app:shapeAppearance="@style/shapeable_corner_50"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center"
                    android:layout_below="@+id/iv_post_image">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            style="@style/MediumText"
                            android:layout_gravity="center"
                            android:text="@string/episodes"
                            />

                        <TextView
                            android:id="@+id/tv_episodes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            style="@style/MediumText"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:text="85"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/_10ssp">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_rating"
                            />

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            style="@style/MediumText"
                            android:layout_gravity="center"
                            android:text="8.5"
                            />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_below="@+id/iv_blur_post_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-30dp"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_15sdp"
                    android:background="@drawable/bg_top_curved_bottom_sheet">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:layout_marginStart="@dimen/_10sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            android:textSize="@dimen/_30ssp"
                            android:gravity="center"
                            style="@style/MediumText"
                            android:text="\u2022"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            style="@style/SemiBold"
                            android:layout_gravity="center"
                            android:text="@string/title"
                            android:layout_marginStart="@dimen/_5sdp"
                            />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?txtSecondary"
                        style="@style/BoldText"
                        android:text="Steins;Gate"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        />

                    <LinearLayout
                        android:id="@+id/llt_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_10ssp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?txtSecondary"
                                android:textSize="@dimen/_30ssp"
                                android:gravity="center"
                                style="@style/MediumText"
                                android:text="\u2022"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?txtSecondary"
                                style="@style/SemiBold"
                                android:layout_gravity="center"
                                android:text="@string/trailer"
                                android:layout_marginStart="@dimen/_5sdp"
                                />

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_marginStart="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            app:cardCornerRadius="@dimen/_10sdp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:id="@+id/iv_sound_on_off"
                                    android:layout_width="@dimen/_25sdp"
                                    android:layout_height="@dimen/_25sdp"
                                    android:layout_margin="@dimen/_10sdp"
                                    android:elevation="@dimen/_5sdp"
                                    android:visibility="gone"
                                    android:layout_centerVertical="true"
                                    android:layout_centerInParent="true"
                                    />
                                <WebView
                                    android:id="@+id/youtubeWebView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />


                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_10ssp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            android:textSize="@dimen/_30ssp"
                            android:gravity="center"
                            style="@style/MediumText"
                            android:text="\u2022"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?txtSecondary"
                            style="@style/SemiBold"
                            android:layout_gravity="center"
                            android:text="@string/synopsis"
                            android:layout_marginStart="@dimen/_5sdp"
                            />

                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?txtSecondary"
                        style="@style/RegularText"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="Although the golden age of piracy is about to reach new heights, most people do not seek the glory of finding the elusive One Piece—a treasure signifying a new conqueror of all seas that was once embodied by the legendary King of the Pirates, Gol D. Roger. However, even if civilians generally despise pirates, they secretly cheer for at least one of them. \n\nOne red-headed girl from Sabaody Archipelago is no exception: She reveres Nami, the ingenious female navigator of Monkey D. Luffy's Straw Hat crew. Determined to deliver a fan letter to her idol, the Sabaody child is prepared to challenge forces of authority who strive to prevent Luffy and his friends from departing for their next destination: the New World. But to succeed, Nami's fan may need to risk her life and interfere with the Marines' plans, potentially causing devastating consequences for the wider world.\n\n[Written by MAL Rewrite]"
                        android:layout_marginStart="@dimen/_25sdp"
                        />

                    <LinearLayout
                        android:id="@+id/llt_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_10ssp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?txtSecondary"
                                android:textSize="@dimen/_30ssp"
                                android:gravity="center"
                                style="@style/MediumText"
                                android:text="\u2022"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?txtSecondary"
                                style="@style/SemiBold"
                                android:layout_gravity="center"
                                android:text="@string/genre"
                                android:layout_marginStart="@dimen/_5sdp"
                                />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_genre"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:overScrollMode="never"
                            android:scrollbars="none"
                            android:layout_marginStart="@dimen/_25sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:clipToPadding="false"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/llt_main_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_10ssp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?txtSecondary"
                                android:textSize="@dimen/_30ssp"
                                android:gravity="center"
                                style="@style/MediumText"
                                android:text="\u2022"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?txtSecondary"
                                style="@style/SemiBold"
                                android:layout_gravity="center"
                                android:text="@string/main_cast"
                                android:layout_marginStart="@dimen/_5sdp"
                                />

                        </LinearLayout>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_main_cast"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:overScrollMode="never"
                            android:scrollbars="none"
                            android:layout_marginStart="@dimen/_25sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:clipToPadding="false"
                            />

                    </LinearLayout>



                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:background="@drawable/bg_unselected_tab">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerHorizontal="true"
                    android:foregroundGravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:src="@drawable/ic_close" />

            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>